tests/sksl/errors/Ossfuzz36850.asm.frag
### Compilation failed:

error: 1: expected expression, but found ']'
error: 1: expected ']', but found ';'
error: 2: expected ';', but found 'void'
3 errors
